--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
-  font-size: 1.5em;
-  background: #1b1523;
-  color: #fff;
-  text-align: center;
+  /* background: #1b1523; */
+  background-color: whitesmoke;
+  /* text-align: center; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,68 +10,153 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.App {
-max-width: 860px ;
+.game {
+  max-width: 70vw;
+  max-height: 70vh;
   margin: 40px auto;
 }
 
-button{
-  background: none;
-  border: 2px solid #fff;
-  padding: 6px 12px;
+.header {
+  text-align: center;
+}
+
+.header h1 {
+  background-color: rgb(247, 246, 246);
+  border-bottom: 1px solid rgb(156, 156, 156);
+  -webkit-box-shadow: 0 4px 6px -6px #222;
+  -moz-box-shadow: 0 4px 6px -6px #222;
+  box-shadow: 0 4px 6px -6px #222;
+  padding: 5px;
+}
+
+.moves {
+  padding: 15px;
+  font-weight: 800;
+  font-size: 1.1em;
+}
+
+.level {
+  padding: 15px;
+  font-weight: 800;
+  font-size: 1.1em;
+}
+
+.starButton {
+  width: 20vw;
+  height: 4vh;
+  padding: 10px;
+  color: white;
+  border-radius: 6px;
+  border: 1px solid rgb(129, 223, 129);
+  background-color: rgb(73, 218, 73);
+  cursor: pointer;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 15px;
+}
+
+.card {
+  width: 80%;
+  height: 70px;
   border-radius: 4px;
-  color: #fff;
+  box-shadow: 2px 2px 4px 4px #6eb9e4e5;
+  transition: 0.5s;
+  transform-style: preserve-3d;
+  position: relative;
+  cursor: pointer;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  box-shadow: 2px 2px 4px 4px #6eb9e4e5;
+  border-radius: 4px;
+}
+
+.card-face {
+  backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.card-back-face {
+  transform: rotateY(180deg);
+  width: 100%;
+  height: 100%;
+}
+.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.is-inactive {
+  /* visibility: hidden; */
+  transform: rotateY(180deg);
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 6px;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
   font-weight: bold;
   cursor: pointer;
-  font-size: 1em;
 }
 
-button:hover{
-  background-color: #c23866;
-  color: #fff;
-}
-
-.card-grid{
-  margin-top: 40px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 20px;
-} 
-
-.card{
-  position: relative;
-}
-
-.card img{
-  width: 100%;
-  display: block;
+input {
+  width: 35vw;
+  height: 2vh;
+  margin-bottom: 5px;
+  border: 1px solid black;
   border-radius: 6px;
-  border: 2px solid #fff;
-  height: 200px;
 }
 
-
-/* front of card - the picture */
-.card .front {
-  transform: rotateY(90deg);
-  transition: all ease-in 0.2s;
-  position: absolute;
+.Ok-button {
+  margin-right: 5px;
+  width: 8vw;
+  height: 2vh;
+  border-radius: 6px;
+  border: 1px solid rgb(129, 223, 129);
+  background-color: rgb(73, 218, 73);
+  cursor: pointer;
 }
 
-.flipped .front{
-  transform: rotateY(0deg);
-  transition-delay: 0.2s;
+.cancel-button {
+  width: 9vw;
+  height: 2vh;
+  border-radius: 6px;
+  border: 1px solid rgb(216, 97, 97);
+  background-color: rgb(206, 61, 61);
+  cursor: pointer;
 }
 
-/* back of card - cover */
-.card .back{
-  transition: all ease-in 0.2s;
-  transition-delay: 0.2s;
+.end-game h2 {
+  font-size: 1.1em;
 }
 
-.flipped .back{
-  transform: rotateY(90deg);
-  transition-delay: 0s;
-
+.end-game {
+  margin-left: 140px;
 }
